recursion.hanoi.SplitHanoi2.scala.error
Erreur de compilation :
SplitHanoi2:22: error: not enough arguments for method hanoi: (height: Int, src: Int, other: Int, dst: Int)Unit.
Unspecified value parameter dst.
    hanoi(other, src, dst1)
         ^